--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "howler": "^2.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "semantic-ui-react": "^0.71.4"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
