--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^2.8.1",
+    "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.71.4"
   },
   "devDependencies": {
